# robodk_crx_kinematics

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  crxkinematics.pro  pyproject.toml
.docker/: .env.example  Dockerfile  README.md  compose.build.yaml  compose.license.yaml  compose.yaml  docker-bake.hcl  docker-entrypoint.sh  healthcheck.sh  installscript.qs
assets/: Fanuc-CRX-10iA-Custom.robot  Fanuc-CRX-10iA-L-Custom.robot  Fanuc-CRX-30iA-Custom.robot  Fanuc-CRX-5iA-Custom.robot  crx10ia-test-station.rdk
include/: angle_conversions_inline.h  crx_kinematics.h  crx_math_helpers.h  crx_pose_helpers.h  crx_robodk_adapter.h  crx_solver.h  crx_types.h  crx_vector_helpers.h
scripts/: benchmark_ab.py  build_crx_kinematics_msvc.bat  build_crx_kinematics_qmake.bat  install.bat  start_debug.bat
src/: crx_kinematics.cpp  crx_math_compat.cpp  crx_robodk_adapter.cpp  crx_solver.cpp
tests/: README.md  conftest.py  crx_config.py  test_crx_kinematics.py  test_crx_robolink_kinematics.py  test_version_metadata.py
tests/fixtures/: CRX10iA-solutions.csv  CRX10iA-solutions.json  CRX10iA-solutions.xlsx  compile_fixtures.py
