[project]
name = "test-crx-kinematics"
version = "0.1.0"
description = "Tester for Fanuc CRX kinematics solver for RoboDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.151.9",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "robodk>=5.9.4",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)s %(message)s"
# addopts = "-q"
# If Tracebacks are too long, use --tb=line to shorten 
addopts = "-q --tb=line -ra"

testpaths = ["tests"]
